// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-member should create a member 1`] = `
{
  "createDate": "<normalized>",
  "email": "test@example.com",
  "failedPasswordAttempts": 0,
  "flags": [],
  "groups": [],
  "id": "normalized-id",
  "isApproved": false,
  "isLockedOut": false,
  "isTwoFactorEnabled": false,
  "kind": "Default",
  "lastLockoutDate": null,
  "lastLoginDate": null,
  "lastPasswordChangeDate": null,
  "memberType": {
    "collection": null,
    "icon": "icon-user",
    "id": "normalized-member-type-id",
  },
  "updateDate": "<normalized>",
  "username": "test@example.com",
  "values": [],
  "variants": [
    {
      "createDate": "<normalized>",
      "culture": null,
      "name": "Test Member",
      "segment": null,
      "updateDate": "<normalized>",
    },
  ],
}
`;

exports[`create-member should create a member with additional properties 1`] = `
{
  "content": [],
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "message": "Member created successfully",
  },
}
`;

exports[`create-member should create a member with additional properties 2`] = `
{
  "createDate": "<normalized>",
  "email": "test@example.com",
  "failedPasswordAttempts": 0,
  "flags": [],
  "groups": [],
  "id": "normalized-id",
  "isApproved": false,
  "isLockedOut": false,
  "isTwoFactorEnabled": false,
  "kind": "Default",
  "lastLockoutDate": null,
  "lastLoginDate": null,
  "lastPasswordChangeDate": null,
  "memberType": {
    "collection": null,
    "icon": "icon-user",
    "id": "normalized-member-type-id",
  },
  "updateDate": "<normalized>",
  "username": "test@example.com",
  "values": [
    {
      "alias": "customfield",
      "culture": null,
      "editorAlias": "Umbraco.TextBox",
      "segment": null,
      "value": "customValue",
    },
  ],
  "variants": [
    {
      "createDate": "<normalized>",
      "culture": null,
      "name": "Test Member",
      "segment": null,
      "updateDate": "<normalized>",
    },
  ],
}
`;
